# demo_cargo_pkgs-release

./: Cargo.toml  README.md  debian.store  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  control.em  copyright  gbp.conf  rules  rules.em
demo_cargo_pkg_app/: Cargo.toml  package.xml
demo_cargo_pkg_lib/: Cargo.toml  colcon.pkg  package.xml
demo_cargo_pkg_lib/src/: lib.rs
rpm/: ros-cargotest-demo-cargo-pkg-app.spec  ros-cargotest-demo-cargo-pkg-lib.spec  template.spec  template.spec.em
src/: main.rs
