<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_cargo_pkg_app</name>
  <version>0.1.0</version>
  <description>A demonstrational binary application that consumes a local helper library.</description>
  <maintainer email="logans@cottsay.net">Scott K Logan</maintainer>
  <license>Apache-2.0</license>

  <build_depend>demo_cargo_pkg_lib</build_depend>

  <export>
    <build_type>cargo</build_type>
  </export>
</package>
